testsuite/bsc.bugs/bluespec_inc/b880/FieldSelectError.bsv.bsc-out.expected
checking package dependencies
compiling FieldSelectError.bsv
Error: "FieldSelectError.bsv", line 8, column 7: (T0138)
  The expression does not have a field `deq' because it is not a struct or
  interface. Found type:
    Bit#(32)
