testsuite/bsc.bugs/bluespec_inc/b880/FieldSelectError.bsv
import FIFO::*;

module mkTest();

  Reg#(Bit#(32)) r <- mkRegU;

  rule test;
    r.deq;
  endrule

endmodule
